tests/ui/feature-gates/feature-gate-asm_const_ptr.rs
//@ only-x86_64

use std::arch::asm;

fn main() {
    unsafe {
        asm!("/* {} */", const &0);
        //~^ ERROR using pointers in asm `const` operand is experimental
    }
}
